# Bimanual-Manipulation

./: CMakeLists.txt  README.md  UR5_kinematics.cpp  UR5_kinematics.h  bimanual.cpp  kauthamshell.cpp  kauthamshell.h  rob.cpp  rob.h
Experiments/models/controls/: .directory  AllegroRight.cntr  UR5_AH_L.cntr  UR5_AH_L2.cntr  UR5_AH_Left.cntr  UR5_AH_R.cntr  UR5_AH_R2.cntr  UR5_AH_RL.cntr  UR5_AH_Right.cntr
Experiments/models/obstacles/: tuboGoal.iv  tuboGoal1.iv
Experiments/models/robots/: UR5_AllegroHandL.urdf  UR5_AllegroHandR.urdf  UR5_CALIBRATION_L.urdf  UR5_CALIBRATION_R.urdf
Experiments/models/robots/UR5/: Base.wrl  Base_bbox.wrl  Shoulder_bbox.wrl
Experiments/xml/: .directory  AllegroHandLeft.xml  AllegroHandRight.xml  BMM3.xml  BMM3_Regrasp.xml  BMM3_Regrasp2.xml  UR5_AH_L.xml  UR5_AH_LR_2.xml  UR5_AH_LR_BOTH_ARMS.xml  UR5_AH_LR_BOTH_ARMS_SIMULATION.xml  UR5_AH_LR_LEFT_ARM.xml  UR5_AH_LR_RIGHT_ARM.xml  UR5_AH_LR_SIMULATION_LEFT.xml  UR5_AH_LR_SIMULATION_RIGHT.xml  UR5_AH_L_offsetR.xml  UR5_AH_R.xml  UR5_AH_RL_BOTH_ARMS.xml  UR5_AH_RL_BOTH_ARMS2.xml  UR5_AH_R_offsetL.xml
